# alert_infra

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alert_infra/: __init__.py  alert.py  celery.py  exceptions.py  security.py  transports.py
alert_infra/apps/: __init__.py  http.py  slack.py  telegram.py
alert_infra/django/: __init__.py  config.py  context.py  email.py  tasks.py
alert_infra/email/: __init__.py  helper.py  interfaces.py  providers.py  services.py  tasks.py  transports.py
feature_flag_infra/: __init__.py
feature_flag_infra/django/: __init__.py
tests/: conftest.py  settings.py  test_async.py  test_core.py  test_django_integration.py  test_transports.py
