[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-infra"
description = "Reusable alert detection infrastructure for Django and Python projects"
license = {text = "MIT"}
authors = [
    {name = "Offside Integrated Technology (Somtochukwu Emmanuel)", email = "offsideint@gmail.com"}
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

dynamic = ["version"]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["alert_infra*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"alert_infra.django" = ["migrations/*.py"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[project.optional-dependencies]
django = ["django>=4.2"]
celery = ["celery>=5"]
redis = ["redis>=4"]
legacy-email = ["requests", "sendgrid", "resend"]
dev = [
    "django>=4.2",
    "pytest",
    "pytest-django",
    "pytest-mock",
    "coverage"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py"]